--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Tim Berner lee bhavya bhavya
+    <title>MG GAMING
     </title>
     <link rel="stylesheet" href="style.css">
 </head>
